--- a/Assignment 1/assignment1.org
+++ b/Assignment 1/assignment1.org
@@ -198,6 +198,7 @@ viewing with the time required to run each.
     printf("max-1\t\t%.4f\n", time_max_1 * 1.0e3);
     printf("max-2\t\t%.4f\n", time_max_2 * 1.0e3);
     printf("max-3\t\t%.4f\n", time_max_3 * 1.0e3);
+    printf("hist-base\t%.4f\n", time_hist * 1.0e3);
     printf("hist-1\t\t%.4f\n", time_hist_1 * 1.0e3);
     printf("hist-2\t\t%.4f\n", time_hist_2 * 1.0e3);
     printf("hist-3\t\t%.4f\n", time_hist_3 * 1.0e3);
@@ -547,192 +548,113 @@ void hist_3(int N, int M, int **A,
   has been placed in an included text file, with the maximum element and number of elements
   in each bin for each run. It should be noted that the runtime for
   both algorithms is a function of $N$, so the size of $M$ does not significantly
-  affect runtime. Note that unless otherwise specified, the algorithms using the for
+  affect runtime. Note also that unless otherwise specified, the algorithms using the for
   directive use dynamic scheduling.
 
-** N = 10, M = 100, Threads = 5
-   At this size, the code just runs too quickly to make an accurate measurement with the
-   precision allowed by the computer. \\
+** Testing with size N and max M
+    Below are the results of testing various matrix sizes ($N$) and maximum
+    possible numbers ($M$). The output for each combination of $N$ and $M$ is
+    listed as ($N$, $M$). Each of the parallel algorithms were run across $5$
+    threads.
 
-\begin{tabular}{c c}
-Algorithm &       Time (ms) \\ \hline
-init-base &       0.9999 \\
-init-1    &       0.0000 \\
-init-2    &       0.0000 \\
-init-3    &       1.0002 \\
-max-base  &       0.0000 \\
-max-1     &       0.0000 \\
-max-2     &       0.0000 \\
-max-3     &       0.0000 \\
-hist-1    &       0.0000 \\
-hist-2    &       0.9999 \\
-hist-3    &       0.0000 \\
+\begin{center}
+\begin{tabular}{c c c c c c c}
+Algorithm &       (10, 10^2) & (10, 10^3) & (10^2, 10^2) & (10^2, 10^3) & (10^4, 10^2) & (10^4, 10^3) \\ \hline
+init-base &       0.0000    & 0.0000     & 0.9999     & 0.0000     &  2177.0000    & 1599.9999   \\
+init-1    &       0.0000    & 0.0000     & 12.0001    & 3.9999     &  17280.9999   & 17243.0000  \\
+init-2    &       0.0000    & 0.0000     & 3.0000     & 3.9999     &  17686.0001   & 18946.0001  \\
+init-3    &       0.0000    & 0.0000     & 4.9999     & 6.0000     &  35490.9999   & 36763.0000  \\
+max-base  &       0.0000    & 0.0000     & 0.0000     & 0.0000     &  697.0000     & 421.0000    \\
+max-1     &       0.0000    & 0.0000     & 0.0000     & 0.0000     &  385.9999     & 347.9998    \\
+max-2     &       0.0000    & 0.0000     & 0.0000     & 0.0000     &  105.0000     & 78.0001     \\
+max-3     &       0.0000    & 0.0000     & 0.0000     & 0.9999     &  76.9999      & 71.0001     \\
+hist-base &       0.0000    & 0.0000     & 0.0000     & 0.0000     &  715.0002     & 730.0000    \\
+hist-1    &       0.0000    & 0.0000     & 0.0000     & 0.0000     &  786.9999     & 674.0000    \\
+hist-2    &       0.0000    & 0.0000     & 0.0000     & 0.0000     &  170.0001     & 171.0000    \\
+hist-3    &       0.0000    & 0.0000     & 0.0000     & 0.0000     &  188.9999     & 182.9998    \\
 \end{tabular}
+\end{center}
 
-** N = 100, M = 1000, Threads = 5
-   Similarly, the code is able to run each of these too quickly for an accurate
-   measurement; the 1 ms recorded on hist-p could possibly be a statistical error,
-   considering the volatility of the runtimes. $M$ was increased to $1000$ for this
-   run and the subsequent run, owing to the increased size of $N$. \\
+     The algorithms ran too quickly on matrices with size $N = 10$ for the timer
+     to accurately measure it. Increasing $N$ to $N = 100$ showed minor results
+     for algorithms with poor runtimes, but quicker algorithms still ran too
+     quickly to be measured. However increasing $M$ did not increase the runtime
+     for the algorithms, displaying the fact that the algorithms should be
+     a function of $N$, not $M$. Setting $N = 10^4$ gave the computer enough
+     iterations to properly capture the runtime, and this is where the trends
+     appear. We can see that the =init-2= and =init-3= functions perform
+     considerably worse in parallel than in serial, but the reason for this
+     is unclear; it could be the result of poor caching of the matrix, or
+     could come as a result of a peculiarity of the server's environment.
 
-\begin{tabular}{c c}
-Algorithm &       Time (ms) \\ \hline
-init-base &       0.9999 \\  
-init-1    &       0.0000 \\ 
-init-2    &       0.9999 \\ 
-init-3    &       0.0000 \\ 
-max-base  &       0.0000 \\ 
-max-1     &       0.0000 \\ 
-max-2     &       1.0002 \\ 
-max-3     &       0.0000 \\ 
-hist-1    &       0.0000 \\ 
-hist-2    &       0.0000 \\ 
-hist-3    &       0.0000 \\ 
+     The =max= and =hist= algorithms showed considerable speedup when run in
+     parallel. All three parallel =max= functions showed an improvement in
+     speed over their serial counterparts, with the for-directive reduction
+     clause generally running quicker than a for-directive without it. Simply
+     using the for-directive showed a measurable speedup over manual decomposition,
+     however. This is likely due to the overhead involved in the =get_omp_thread_num()=
+     function.
+
+     The results are more subtle in the =hist= functions, where manual decomposition
+     runs at a similar speed to the serial threads (also likely due to the 
+     =get_omp_thread_num()= function). However, as with the =max= functions, the
+     algorithms using the for-directive are quite fast.
+
+** Increasing the number of threads
+   Below are the results with running the algorithms with $N = 10^4$ and
+   $M = 10^3$. The first column shows the code running over $5$ threads,
+   and the second over $10$ threads.
+
+\begin{center}
+\begin{tabular}{c c c}
+Algorithm &       5 Threads   & 10 Threads  \\ \hline
+init-base &       1599.9999   & 2674.0000   \\
+init-1    &       17243.0000  & 20714.9999  \\
+init-2    &       18946.0001  & 18810.0002  \\
+init-3    &       36763.0000  & 40885.0000  \\
+max-base  &       421.0000    & 546.9999    \\
+max-1     &       347.9998    & 400.0001    \\
+max-2     &       78.0001     & 69.0000     \\
+max-3     &       71.0001     & 53.0000     \\
+hist-base &       730.0000    & 1250.0000   \\
+hist-1    &       674.0000    & 500.0000    \\
+hist-2    &       171.0000    & 104.0001    \\
+hist-3    &       182.9998    & 108.0000    \\
 \end{tabular}
+\end{center}
 
-** N = 1000, M = 1000, Threads = 5
-   Increasing $N$ to 1000 showed results for all algorithms, and indicated some
-   trends. First, the algorithms using only the parallel directive actually run
-   worse than their serial counterparts, due to the overhead of the call to
-   =omp_get_thread_num=. However, the for directive, with or without the
-   reduction clause, seems to show improvement over the serial code. \\
+    It can clearly be seen that =max-2=, =max-3=, =hist-1= =hist-2= and =hist-3= all
+    benefit from being spread over more threads. =max-1=, however, performs slightly
+    worse (but within the margin of error), which could be due to costs incurred
+    from higher overhead.
+    
+** Static scheduling with the for-directive
+   The following chart shows the results of using static scheduling with
+   the for-directive. The results of $N = 10^4, M = 10^3$ from the above
+   chart are duplicated below for comparison.
 
-\begin{tabular}{c c}
-Algorithm &       Time (ms) \\ \hline
-init-base &       10.9999 \\
-init-1    &       11.0002 \\
-init-2    &       7.9999 \\
-init-3    &       35.0001 \\
-max-base  &       1.9999 \\
-max-1     &       3.0000 \\
-max-2     &       3.9999 \\
-max-3     &       1.0002 \\
-hist-1    &       3.9999 \\
-hist-2    &       4.9999 \\
-hist-3    &       1.0002 \\
+\begin{center}
+\begin{tabular}{c c c c c}
+Algorithm &       Dynamic    & Static, 4  & Static, 64 & Static, 128 \\ \hline
+init-base &       1599.9999  & 1667.0001   & 1718.0002   & 1928.0000   \\
+init-1    &       17243.0000 & 20426.9998  & 18166.9998  & 18278.0001  \\
+init-2    &       18946.0001 & 19998.0001  & 16650.0001  & 17130.9998  \\
+init-3    &       36763.0000 & 25256.0000  & 20789.0000  & 19288.0001  \\
+max-base  &       421.0000   & 531.9998    & 428.0000    & 428.0000    \\
+max-1     &       347.9998   & 439.0001    & 346.0000    & 384.0001    \\
+max-2     &       78.0001    & 123.9998    & 114.0001    & 101.0001    \\
+max-3     &       71.0001    & 112.0002    & 119.0000    & 110.9998    \\
+hist-base &       730.0000   & 1083.9999   & 780.0000    & 755.0001    \\
+hist-1    &       674.0000   & 957.9999    & 653.0001    & 1036.9999   \\
+hist-2    &       171.0000   & 255.0001    & 168.0000    & 207.9999    \\
+hist-3    &       182.9998   & 266.0000    & 179.9998    & 212.0001    \\
 \end{tabular}
+\end{center}
 
-** N = 10000, M = 100, Threads = 5
-   The trends in the previous execution are continued when increasing $N$
-   to $10000$. The for directive makes significant gains over the serial code
-   while the parallel directive likely suffers from overhead. Note that $M$
-   has been set to $100$ for this run, to compare against $1000$ in the next. \\
-
-\begin{tabular}{c c}
-Algorithm  &     Time (ms) \\ \hline
-init-base  &     852.0000 \\
-init-1     &     801.0001 \\
-init-2     &     814.9998 \\
-init-3     &     3341.0001 \\
-max-base   &     286.0000 \\
-max-1      &     370.0001 \\
-max-2      &     61.9998 \\
-max-3      &     62.0000 \\
-hist-1     &     419.9998 \\
-hist-2     &     118.0000 \\
-hist-3     &     137.0001 \\
-\end{tabular}
-
-** N = 10000, M = 1000, Threads = 5
-   As suggested earlier, this run shows that $M$ has no effect on the runtime
-   of the algorithms; all runtimes are within standard variance for runtimes. \\
-
-\begin{tabular}{c c}
-Algorithm &       Time (ms) \\ \hline
-init-base &       829.9999 \\
-init-1    &       727.0000 \\
-init-2    &       740.0000 \\
-init-3    &       3319.0000 \\
-max-base  &       272.0001 \\
-max-1     &       368.0000 \\
-max-2     &       62.0000 \\
-max-3     &       62.0000 \\
-hist-1    &       418.9999 \\
-hist-2    &       120.0001 \\
-hist-3    &       138.9999 \\
-\end{tabular}
-
-** N = 10000, M = 1000, Threads = 8 
-   Increasing the number of threads to $8$ dramatically improves runtime for the
-   parallel code, lowering the effect of overhead on the parallel directive
-   algorithms and continuing speed increases with the for directive algorithms. \\
-
-\begin{tabular}{c c}
-Algorithm &       Time (ms) \\ \hline
-init-base &       846.0000 \\
-init-1    &       661.0000 \\
-init-2    &       676.0001 \\
-init-3    &       2577.9998 \\
-max-base  &       282.0001 \\
-max-1     &       318.0001 \\
-max-2     &       73.0000 \\
-max-3     &       53.0000 \\
-hist-1    &       350.0001 \\
-hist-2    &       110.9998 \\
-hist-3    &       128.0000 \\
-\end{tabular}
-
-** N = 10000, M = 1000, Threads = 5 (static, 4)
-   Setting $N = 10000$ and $M = 1000$ with $5$ threads, static scheduling with
-   chunks of size $4$ was tested. This showed a mild decrease in speed for
-   algorithms using the for directive, but no significant changes. The largest
-   change, by a substantial margin, is in the init\_3 function, which drops
-   in runtime significantly when it is run with static scheduling. This drop
-   will carry on with the subsequent chunk sizes. \\
-
-\begin{tabular}{c c}
-Algorithm &      Time (ms) \\ \hline
-init-base &       839.0000 \\
-init-1    &       665.9999 \\
-init-2    &       662.0002 \\
-init-3    &       763.9999 \\
-max-base  &       270.9999 \\
-max-1     &       344.0001 \\
-max-2     &       63.0000 \\
-max-3     &       66.9999 \\
-hist-1    &       425.0000 \\
-hist-2    &       119.9999 \\
-hist-3    &       149.0002 \\
-\end{tabular}
-
-** N = 10000, M = 1000, Threads = 5 (static, 64)
-   Setting the chunk size to $64$ did not appear to have a significant effect
-   on runtime, and all algorithms run within standard variance. \\
-
-\begin{tabular}{c c}
-Algorithm &      Time (ms) \\ \hline
-init-base &      832.9999 \\
-init-1    &      757.0002 \\
-init-2    &      757.9999 \\
-init-3    &      857.0001 \\
-max-base  &      284.9998 \\
-max-1     &      372.0000 \\
-max-2     &      67.0002 \\
-max-3     &      64.9998 \\
-hist-1    &      446.0001 \\
-hist-2    &      125.9999 \\
-hist-3    &      148.0000 \\
-\end{tabular}
-
-** N = 10000, M = 1000, Threads = 5 (static, 128)
-   Increasing the chunk size to $128$ appeared to have a slight improvement for
-   the maximizing algorithms using the for directive, but no other changes. These
-   changes are within variance, and are likely the result of statistical noise. \\
-
-\begin{tabular}{c c}
-Algorithm &      Time (ms) \\ \hline
-init-base &       839.9999 \\
-init-1    &       657.0001 \\
-init-2    &       664.0000 \\
-init-3    &       679.9998 \\
-max-base  &       302.0000 \\
-max-1     &       364.0001 \\
-max-2     &       66.0000 \\
-max-3     &       66.0000 \\
-hist-1    &       444.9999 \\
-hist-2    &       119.9999 \\
-hist-3    &       149.0002 \\
-\end{tabular}
+    The chart shows an overall decrease in performance when using static
+    scheduling, except with a chunk size of $64$, where =hist-1= appears
+    to match the speed it has when using dynamic chunking. As with previous
+    tests, the parallel initialization functions perform poorly.
 
 ** Conclusions
    Overall, the parallel algorithms using the for directive appear to have the
